k8s/JLAB/jlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jlab-service
  namespace: osg-frontends
spec:
  selector:
    k8s-app: jlab-frontend
  type: ClusterIP
  ports:
  - name: web
    port: 80
    targetPort: 80
    protocol: TCP
