k8s/JLAB/jlab-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jlab-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: ""
  namespace: osg-frontends
spec:
  rules:
  - host: jlab-frontend.nautilus.optiputer.net
    http:
      paths:
      - backend:
          serviceName: jlab-service
          servicePort: 80
